Fix T50975: Cycles: Light sampling threshold inadvertently clamps negative lamps